--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-     "react-helmet": "^5.2.1"//,
-    // "scrollmagic": "^2.0.7",
-    // "scrollmagic-plugin-gsap": "^1.0.3"
+     "react-helmet": "^5.2.1"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
@@ -44,3 +42,4 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   }
 }
+
